# CentralizedEHR

./: .gitignore  README.md  main.py  pyproject.toml
backend/: .env.example  requirements.txt  schema.sql
backend/app/: config.py  database.py  main.py
backend/app/auth/: api_keys.py  dependencies.py  jwt.py
backend/app/middleware/: __init__.py
backend/app/models/: __init__.py  api_keys.py  appointments.py  consents.py  doctors.py  encounters.py  hospital_patient_mapping.py  hospitals.py  imaging_reports.py  lab_results.py  master_data.py  patients.py  prescriptions.py
backend/app/routers/: admin_router.py  auth_router.py  clinical_router.py  his_router.py  patient_router.py
backend/app/schemas/: schemas.py
backend/app/services/: appointment_service.py  clinical_service.py  consent_service.py  drug_interaction_service.py  his_service.py  master_data_service.py  patient_service.py
data/: DISEASE.md  FAKENAME.md  HOSPITAL.md
data-warehouse-sql-server/: centralizedehr_dwh_postgresql.sql  centralizedehr_dwh_sqlserver_indexes.sql  centralizedehr_dwh_sqlserver_local.sql
docs/: BI_REALTIME_PLAN.md  CentralizedEHR_DWH_SoDoChiTiet.md  ETL_PIPELINE.md  MAIN_FLOW.md  PART1_DETAIL.md  PART2_DATA_WAREHOUSE_REWRITTEN_CentralizedEHR.md  PART2_DETAIL.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminDashboard.jsx  DoctorDashboard.jsx  HisDashboard.jsx  Login.jsx  PatientDashboard.jsx
scripts/: load_disease.ipynb  load_hospital_and_doctor.ipynb
(+1 files in other folders)
