[project]
name = "centralizedehr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.2",
    "asyncpg==0.29.0",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic-settings==2.5.2",
    "pydantic[email]==2.9.2",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "redis==5.0.8",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.30.6",
]
